# MLOps_AGH_lab1_bstepniewski

./: .env.dev  .env.prod  .env.test  .pre-commit-config.yaml  .sops.yaml  Dockerfile  README.md  app.py  inference.py  main.py  public_key.asc  pyproject.toml  pytest.ini  secrets.yaml  settings.py  training.py
tests/: test_main.py
