[project]
name = "mlops-agh-lab1-bstepniewski"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "mlops-agh-lab1-bstepniewski",
]

[tool.uv.sources]
mlops-agh-lab1-bstepniewski = { workspace = true }
